@@ -1,3 +1,8 @@
+What's new in version 0.93:
+
+  No significant changes.  (Release was mainly to correct an error in
+  one of the test files.)
+
 What's new in version 0.92:
 
   Bug fixes:  Negative 'nrecs' argument to 'splice' is now handled
